<resources>
    <string name="app_name">measureAR</string>
    <!-- Settings Activity Title -->
    <string name="action_settings">Settings</string>
    <string name="display_text">Auto Focus</string>
    <string name="quaternion_text">Show quaternion angles</string>
    <string name="external_image">Enable External Image</string>


    <string name="change_measure_units">Change Measure Units</string>

    <string name="change_line_color">Change Line Color</string>
    <string name="change_origin_color">Change Origin Color</string>
    <string name="change_element_color">Change Element Color</string>
    <string name="change_color_mark_sphere_key">Change Mark Sphere Color</string>
    <string name="change_labels_size">Change Labels Size</string>
    <string name="change_reference_marker_size">Change Reference Marker Size</string>
    <string name="change_move_maker">Move Marker Position</string>
    <string name="change_sphere_size">Change Point Sphere Size</string>
    <string name="change_line_size">Change Line Size</string>




    <string name="text_size">Size of marker width in millimeters (Only external markers)</string>
    <string name="text_alpha">Choose the transparent value: 0 transparent, 100 opaque)</string>


    <string name="pref_focus_key" translatable="false">focus</string>
    <string name="pref_quaternion_key" translatable="false">quaternion</string>
    <string name="pref_external_image_key" translatable="false">external_image</string>
    <string name="pref_external_path_one_key" translatable="false">path_one</string>
    <string name="pref_external_path_two_key" translatable="false">path_two</string>




    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_measure_units_key" translatable="false">units</string>
    <string name="pref_color_line_key" translatable="false">color_line</string>
    <string name="pref_color_origin_key" translatable="false">color_origin</string>
    <string name="pref_color_element_key" translatable="false">color_element</string>
    <string name="pref_color_mark_sphere_key" translatable="false">color_mark</string>
    <string name="pref_labels_size_key" translatable="false">labels_size</string>
    <string name="pref_ref_marker_size_key" translatable="false">ref_marker</string>
    <string name="pref_move_center_key" translatable="false">move_center</string>
    <string name="pref_sphere_size_key" translatable="false">ref_sphere_size</string>
    <string name="pref_line_size_key" translatable="false">ref_line_size</string>




    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_color_label_yellow">Yellow</string>
    <string name="pref_color_label_white">White</string>
    <string name="pref_color_label_black">Black</string>



    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="pref_color_yellow_value" translatable="false">yellow</string>
    <string name="pref_color_white_value" translatable="false">white</string>
    <string name="pref_color_black_value" translatable="false">black</string>



    <string name="pref_units_mm_label">Millimeters</string>
    <string name="pref_units_cm_label">Centimeters</string>
    <string name="pref_units_meter_label">Meters</string>


    <string name="pref_units_mm_value" translatable="false">mm</string>
    <string name="pref_units_cm_value" translatable="false">cm</string>
    <string name="pref_units_meter_value" translatable="false">meter</string>



    <string name="pref_size_label_two">2.5 cm</string>
    <string name="pref_size_label_five">5 cm</string>
    <string name="pref_size_label_ten">10 cm</string>


    <string name="pref_size_label_two_value" translatable="false">two</string>
    <string name="pref_size_label_five_value" translatable="false">five</string>
    <string name="pref_size_label_ten_value" translatable="false">ten</string>


    <string name="pref_ref_marker_one">0.1</string>
    <string name="pref_ref_marker_half">0.5</string>
    <string name="pref_ref_marker_normal">1</string>


    <string name="pref_ref_marker_one_value" translatable="false">one</string>
    <string name="pref_ref_marker_half_value" translatable="false">half</string>
    <string name="pref_ref_marker_normal_value" translatable="false">normal</string>


    <string name="pref_move_center_zero_label">0</string>
    <string name="pref_move_center_half_label">0.5</string>
    <string name="pref_move_center_one_label">1</string>


    <string name="pref_move_center_zero_value" translatable="false">zero</string>
    <string name="pref_move_center_half_value" translatable="false">half</string>
    <string name="pref_move_center_one_value" translatable="false">normal</string>



    <string name="pref_image_one">Choose an image as origin</string>
    <string name="pref_image_one_key" translatable="false">image_one</string>


    <string name="pref_image_two">Choose an image as element</string>
    <string name="pref_image_two_key" translatable="false">image_two</string>

    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_alpha_key" translatable="false">alpha</string>


    <!-- Default for size preference -->
    <string name="pref_size_default" translatable="false">50</string>
    <string name="pref_alpha_default" translatable="false">100</string>

</resources>
